# rust.gen

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  type_mappings.md
.github/workflows/: bump.yml  ci.yml  regenerate-demo-output.yml  release.yml
demo-output/: Cargo.toml  gen-warnings.yaml
demo-output/src/: lib.rs  statements.rs  types.rs
demo-output/src/mapping/: mod.rs
demo-output/src/queries/: create_playlist.rs  get_albums_by_artist.rs  get_artists_with_track_count.rs  get_top_tracks_by_play_count.rs  get_track_details.rs  mod.rs  search_tracks_by_title.rs
demo-output/src/statements/: insert_album.rs  insert_multiple_albums.rs  select_album_by_format.rs  select_album_by_name.rs  select_album_with_tracks.rs  select_genre_by_artist.rs  update_album_recording_returning.rs  update_album_released.rs
demo-output/src/types/: album_type.rs  mod.rs  recording_info.rs  track_metadata.rs
demo-output/tests/: tests.rs
tests/: AllTypes.dhall  Demo.dhall
